[svn r12072] fix IE6 bug when step names are too long (comment number 2 of thomas : http://projects.dokeos.com/?do=details&id=1432)

--- a/main/newscorm/learnpath.css
+++ b/main/newscorm/learnpath.css
@@ -22,7 +22,7 @@ div.lp_resource_elements{background:#FAFAFA; border:1px solid #999999; border-bo
 div.lp_resource_elements_end{background:#FAFAFA; border:1px solid #999999; border-top: 0px; display:none; padding:5px 10px; width:350px;}
 div.lp_resource_elements div{padding:3px;}
 
-div.lp_tree{min-height:300px; padding:3px 10px 3px 0; overflow:auto; width:187px;}
+div.lp_tree{height:350px; padding:3px 10px 3px 0; overflow-x : auto; overflow-y : scroll; width:187px;}
 
 
 hr{background:#999999; border:0; color:#999999; height:1px; margin:10px auto; width:75%;}
